--- a/config/locales/devise.fr.yml
+++ b/config/locales/devise.fr.yml
@@ -16,30 +16,30 @@ fr:
 
   devise:
     failure:
-      unauthenticated: "Il faut se connecter ou s'inscrire pour continuer."
+      unauthenticated: "Merci de vous connecter ou vous inscrire pour continuer."
       unconfirmed: "Vous devez confirmer votre compte pour continuer."
       locked: "Votre compte est verrouillé."
       invalid: "Email ou mot de passe incorrect."
       invalid_token: "Jeton d'authentication incorrect."
-      timeout: "Votre séance est expiré, Veuillez vous reconnecter pour continuer."
-      inactive: "Votre compte n'était pas encore activé."
+      timeout: "Votre session est expirée, Veuillez vous reconnecter pour continuer."
+      inactive: "Votre compte n'est pas encore activé."
     sessions:
-      signed_in: "Réussite de la connexion."
-      signed_out: "Réussite de la deconnexion."
+      signed_in: "Connexion réussie!"
+      signed_out: "Déconnexion réussie, à bientôt!"
     passwords:
-      send_instructions: "Vous allez recevoir un courriel avec des instructions de comment changer votre mot de passe en quelque minutes."
-      updated: "Votre mot de passe est changé. Vous vous êtez connecté maintenant."
+      send_instructions: "Vous allez recevoir un email avec des instructions pour changer votre mot de passe en quelques minutes."
+      updated: "Votre mot de passe est modifié. Vous êtes connecté(e)!"
     confirmations:
-      send_instructions: "Vous allez recevoir un courriel avec des instructions de comment confimer votre compte en quelque minutes."
-      confirmed: "Votre compte est confirmé. Vous vous êtez connecté maintenant."
+      send_instructions: "Vous allez recevoir un email avec des instructions pour valider votre compte en quelques minutes."
+      confirmed: "Votre compte est validé. Vous êtes connecté(e)!"
     registrations:
-      signed_up: "Vous avez réussit de vous inscrir. Si c'est activé, un courriel de la confirmation était envoyé."
-      updated: "Vous avez réussit de metter votre compte à jour."
-      destroyed: "Bye! Votre compte est annulé. Nous souhaiton de vous revoir bientôt."
+      signed_up: "Bienvenue parmi nous, vous êtes inscrit(e). Un email de confirmation vous a été envoyé."
+      updated: "Profil mis à jour."
+      destroyed: "Votre compte a bien été supprimé. A bientôt?"
     unlocks:
-      send_instructions: "Vous allez recevoir un courriel avec des instructions de comment déverrouiller votre compte en quelque minutes."
-      unlocked: "Votre compte est déverrouillé. Vous vous êtez connecté maintenant."
+      send_instructions: "Vous allez recevoir un email avec des instructions pour déverrouiller votre compte en quelques minutes."
+      unlocked: "Votre compte est déverrouillé. Vous êtes bien connecté(e)."
     mailer:
-      confirmation_instructions: "Instructions de la confirmation"
-      reset_password_instructions: "Instructions de changer le mot de passe"
-      unlock_instructions: "Instructions de déverrouiller le compte"
+      confirmation_instructions: "Confirmation de votre inscription à Luma"
+      reset_password_instructions: "Changement de mot de passe"
+      unlock_instructions: "Dévérouiller votre compte"
